fixed overflow on mobile by adjusting banenr padding

--- a/css/components/banners.css
+++ b/css/components/banners.css
@@ -1,7 +1,7 @@
 .banner {
   background-image: url(../../images/flowers.png);
   background-size: cover;
-  padding: 200px;
+  padding: 200px 20px;
   background-position: center;
 }
 
@@ -24,7 +24,7 @@
 
 @media only screen and (max-width: 600px) {
   .banner {
-    padding: 150px;
+    padding: 150px 10px;
   }
   .banner h1 {
    font-size: 1.5em;
